# NextChat

./: index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: agent_runtime.rs  coordinator.rs  domain.rs  llm_rig.rs  logging.rs  memory.rs  mod.rs  permissions.rs  rig_tools.rs  runtime_environment.rs  service.rs  skill_policy.rs  storage.rs  stream_text.rs  tool_approval.rs  tool_catalog.rs  tool_runtime.rs  tool_worker.rs  workflow.rs
src-tauri/src/core/buildin-tools/: ask_user_question.rs  catalog.rs  coordination.rs  filesystem.rs  mod.rs  network.rs  request_peer_input.rs  system.rs  workspace.rs
src-tauri/src/core/llm_rig/: tool_execution.rs
src-tauri/src/core/service/: agent_generation.rs  agent_narrative_orchestration.rs  blockers.rs  clear_history_tests.rs  collaboration.rs  direct_routing.rs  execution_payloads.rs  group_owner_memory_tests.rs  memory.rs  narrative_messages.rs  owner_blocker_orchestration.rs  owner_orchestration.rs  peer_collaboration.rs  quality_gate.rs  routing.rs  runtime.rs  runtime_recovery.rs  runtime_stream.rs  semantic_routing.rs  stage_adjustment.rs  summary_stream.rs  tests.rs  todo_fallback_tests.rs  tool_stream.rs  work_group_owner.rs  workflow_control.rs  workflow_resume.rs
src-tauri/src/core/storage/: bids.rs  memory.rs  messages.rs  tasks.rs  work_groups.rs  workflows.rs
src-tauri/src/core/tool_runtime/: legacy_inputs.rs  policy.rs  skills_tool.rs  (+1 more)
(+78 files in other folders)
